--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 /* Begin main style  */
-main {
+#main {
   margin: 30px;
   height: 743px;
   border: 1px;
   /* Begin article style  */
   /* End banner style  */
 }
-main .card {
+#main .card {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,13 +17,13 @@ main .card {
   border: 1px;
   border-radius: 25px;
 }
-main .card #slider-content {
+#main .card #slider-content {
   position: relative;
   overflow: hidden;
   border-radius: 25px;
   height: 100%;
 }
-main .card .article-banner-img {
+#main .card .article-banner-img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -31,7 +31,7 @@ main .card .article-banner-img {
   -o-object-position: center;
      object-position: center;
 }
-main .card #prev, main .card #next {
+#main .card #prev, #main .card #next {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -39,25 +39,25 @@ main .card #prev, main .card #next {
   color: white;
   cursor: pointer;
 }
-main .card #prev {
+#main .card #prev {
   left: 10px;
 }
-main .card #next {
+#main .card #next {
   right: 10px;
 }
-main .card .dots {
+#main .card .dots {
   position: absolute;
   bottom: 50px;
   left: 50%;
   transform: translateX(-50%);
   color: #FFFFFF;
 }
-main .card .card-content {
+#main .card .card-content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-main .card .card-content .card-title {
+#main .card .card-content .card-title {
   width: 635px;
   height: 51px;
   top: 608px;
@@ -69,7 +69,7 @@ main .card .card-content .card-title {
   letter-spacing: 0em;
   text-align: left;
 }
-main .card .card-content .card-subtitle {
+#main .card .card-content .card-subtitle {
   width: 175px;
   height: 26px;
   top: 659px;
@@ -81,31 +81,31 @@ main .card .card-content .card-subtitle {
   text-align: left;
   margin-top: -35px;
 }
-main .card .card-content .card-host {
+#main .card .card-content .card-host {
   width: 167px;
   height: 64px;
   top: 602px;
   left: 1170px;
   margin-top: 25px;
 }
-main .card .card-content .card-host .card-rating {
+#main .card .card-content .card-host .card-rating {
   width: 196px;
   height: 36px;
   top: 687px;
   left: 1144px;
   margin-top: 27px;
 }
-main .card .card-content .card-host .card-rating .fa-star {
+#main .card .card-content .card-host .card-rating .fa-star {
   color: #FF6060;
 }
-main .card .card-content .card-host .card-rating .fa-start-grey {
+#main .card .card-content .card-host .card-rating .fa-start-grey {
   color: #E3E3E3;
 }
-main .card .card-content .card-host .card-host-name {
+#main .card .card-content .card-host .card-host-name {
   display: flex;
   justify-content: space-between;
 }
-main .card .card-content .card-host .card-host-name .card-avatar {
+#main .card .card-content .card-host .card-host-name .card-avatar {
   width: 64px;
   height: 64px;
   top: 602px;
@@ -115,14 +115,14 @@ main .card .card-content .card-host .card-host-name .card-avatar {
   -webkit-border-radius: 300px 300px 300px 300px;
   -moz-border-radius: 300px 300px 300px 300px;
 }
-main .card .card-content .card-tags {
+#main .card .card-content .card-tags {
   width: 365px;
   height: 25px;
   top: 705px;
   left: 100px;
   border: 1px;
 }
-main .card .card-content .card-tags .card-tag {
+#main .card .card-content .card-tags .card-tag {
   width: 115px;
   height: 25px;
   top: 705px;
@@ -137,14 +137,15 @@ main .card .card-content .card-tags .card-tag {
   background-color: #FF6060;
   padding: 2px 15px 2px 15px;
   border-radius: 4px;
+  margin: 3px;
 }
-main .card .card-accordions {
+#main .card .card-accordions {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, 1fr);
   gap: 10px; /* ajustez ceci pour changer l'espace entre les cartes */
 }
-main .card .card-accordions .accordion-button {
+#main .card .card-accordions .accordion-button {
   border-radius: 5px;
 }
 
@@ -154,14 +155,14 @@ main .card .card-accordions .accordion-button {
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
   /* Begin main style  */
-  main {
+  #main {
     margin: 30px;
     height: 743px;
     border: 1px;
     /* Begin article style  */
     /* End banner style  */
   }
-  main .card {
+  #main .card {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -171,13 +172,13 @@ main .card .card-accordions .accordion-button {
     border: 1px;
     border-radius: 25px;
   }
-  main .card #slider-content {
+  #main .card #slider-content {
     position: relative;
     overflow: hidden;
     border-radius: 25px;
     height: 100%;
   }
-  main .card .article-banner-img {
+  #main .card .article-banner-img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
@@ -185,7 +186,7 @@ main .card .card-accordions .accordion-button {
     -o-object-position: center;
        object-position: center;
   }
-  main .card #prev, main .card #next {
+  #main .card #prev, #main .card #next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -193,24 +194,24 @@ main .card .card-accordions .accordion-button {
     color: white;
     cursor: pointer;
   }
-  main .card #prev {
+  #main .card #prev {
     left: 10px;
   }
-  main .card #next {
+  #main .card #next {
     right: 10px;
   }
-  main .card .dots {
+  #main .card .dots {
     position: absolute;
     bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
     color: #FFFFFF;
   }
-  main .card .card-content {
+  #main .card .card-content {
     display: flex;
     flex-direction: column;
   }
-  main .card .card-content .card-title {
+  #main .card .card-content .card-title {
     width: 335px;
     height: 73px;
     top: 363.88px;
@@ -222,7 +223,7 @@ main .card .card-accordions .accordion-button {
     letter-spacing: 0em;
     text-align: left;
   }
-  main .card .card-content .card-subtitle {
+  #main .card .card-content .card-subtitle {
     width: 175px;
     height: 26px;
     top: 659px;
@@ -234,27 +235,27 @@ main .card .card-accordions .accordion-button {
     text-align: left;
     margin-top: -35px;
   }
-  main .card .card-content .card-host {
+  #main .card .card-content .card-host {
     width: 100%;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
   }
-  main .card .card-content .card-host .card-rating {
+  #main .card .card-content .card-host .card-rating {
     display: flex;
     flex-direction: row;
   }
-  main .card .card-content .card-host .card-rating .fa-star {
+  #main .card .card-content .card-host .card-rating .fa-star {
     color: #FF6060;
   }
-  main .card .card-content .card-host .card-rating .fa-start-grey {
+  #main .card .card-content .card-host .card-rating .fa-start-grey {
     color: #E3E3E3;
   }
-  main .card .card-content .card-host .card-host-name {
+  #main .card .card-content .card-host .card-host-name {
     display: flex;
     justify-content: space-between;
   }
-  main .card .card-content .card-host .card-host-name .card-avatar {
+  #main .card .card-content .card-host .card-host-name .card-avatar {
     width: 64px;
     height: 64px;
     top: 602px;
@@ -264,14 +265,14 @@ main .card .card-accordions .accordion-button {
     -webkit-border-radius: 300px 300px 300px 300px;
     -moz-border-radius: 300px 300px 300px 300px;
   }
-  main .card .card-content .card-tags {
+  #main .card .card-content .card-tags {
     width: 365px;
     height: 25px;
     top: 705px;
     left: 100px;
     border: 1px;
   }
-  main .card .card-content .card-tags .card-tag {
+  #main .card .card-content .card-tags .card-tag {
     width: 115px;
     height: 25px;
     top: 705px;
@@ -286,13 +287,13 @@ main .card .card-accordions .accordion-button {
     background-color: #FF6060;
     padding: 2px 15px 2px 15px;
   }
-  main .card .card-accordions {
+  #main .card .card-accordions {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 10px; /* ajustez ceci pour changer l'espace entre les cartes */
   }
-  main .card .card-accordions .accordion-button {
+  #main .card .card-accordions .accordion-button {
     border-radius: 5px;
   }
 }/*# sourceMappingURL=article.css.map */
