--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -104,6 +104,7 @@ main{
         padding: 30px;
         .card{
             position: relative;
+            cursor: pointer;
             img {
                 width: 100%;
                 height: 255px;
@@ -133,7 +134,9 @@ main{
                 z-index: 1;
                 .card-txt{
                     margin: 10%;
-                    color: #fff;
+                    .card-link{
+                        color: #fff;
+                    }
                 }
             }
         }
