--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -59,26 +59,19 @@
 }
 #main .card .card-content .card-title {
   width: 635px;
-  height: 51px;
-  top: 608px;
-  left: 100px;
+  max-height: 51px;
   color: #FF6060;
   font-size: 36px;
   font-weight: 500;
-  line-height: 51px;
-  letter-spacing: 0em;
   text-align: left;
 }
 #main .card .card-content .card-subtitle {
   width: 275px;
   height: 26px;
-  top: 659px;
-  left: 100px;
   font-size: 18px;
   font-weight: 500;
-  line-height: 26px;
-  letter-spacing: 0em;
   text-align: left;
+  padding-top: 10px;
 }
 #main .card .card-content .card-host {
   width: 167px;
