--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -138,13 +138,17 @@
         .card-accordions {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(1, 1fr);
             gap: 10px; /* ajustez ceci pour changer l'espace entre les cartes */
             .accordion-button{
                 border-radius: 5px;
-
             }
-        }
+            .accordion {
+                flex: 1 1 auto;
+                .accordion-content {
+                    height: 100%; /* changez ceci pour correspondre à la hauteur de l'accordion */
+                }
+            }
+        }        
     }
     /* End banner style  */
 }
