review mobile accordion effect and replace grid by flexbox to delete shift effect between both accordion

--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -151,7 +151,7 @@
   /* Begin main style  */
   #main {
     margin: 30px;
-    height: 743px;
+    height: 85%;
     border: 1px;
     /* Begin article style  */
     /* End banner style  */
@@ -162,7 +162,7 @@
     flex-direction: column;
     gap: 10px;
     position: relative;
-    height: 700px;
+    height: 640px;
     border: 1px;
     border-radius: 25px;
   }
@@ -283,11 +283,8 @@
     padding: 2px 15px 2px 15px;
   }
   #main .card-accordions {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 10px; /* ajustez ceci pour changer l'espace entre les cartes */
-    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
   }
   #main .card-accordions .accordion-button {
     border-radius: 5px;
