put margin-top to accordion card class

--- a/src/assets/styles/article.css
+++ b/src/assets/styles/article.css
@@ -285,6 +285,7 @@
   #main .card-accordions {
     display: flex;
     flex-direction: column;
+    margin-top: 15px;
   }
   #main .card-accordions .accordion-button {
     border-radius: 5px;
