--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -299,6 +299,7 @@
     .card-accordions {
         display: flex;
         flex-direction: column;
+        margin-top: 15px;
         .accordion-button{
             border-radius: 5px;
         }
