--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -143,7 +143,12 @@
         gap: 10px; /* ajustez ceci pour changer l'espace entre les cartes */
         .accordion-button{
             border-radius: 5px;
-
+        }
+        .accordion {
+            flex: 1 1 auto;
+            .accordion-content {
+                height: 200px; /* changez ceci pour correspondre à la hauteur de l'accordion */
+            }
         }
     }
     /* End banner style  */
@@ -302,6 +307,12 @@
         margin-top: 15px;
         .accordion-button{
             border-radius: 5px;
+        }
+        .accordion {
+            flex: 1 1 auto;
+            .accordion-content {
+                height: 100%; /* changez ceci pour correspondre à la hauteur de l'accordion */
+            }
         }
     }
     /* End banner style  */
